<resources>
    <string name="app_name">InTernak</string>
    <string name="home_title">Beranda</string>
    <string name="cage_title">Kandang</string>
    <string name="schedule">Jadwal</string>
    <string name="profile_title">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artikel">Artikel</string>
    <string name="view_artikel">Lihat Semua</string>

    <string name="welcome_image_desc">Welcome Image</string>
    <string name="welcome_title">Selamat datang di Internak!</string>
    <string name="welcome_title2">Budidaya Makin Gampang</string>
    <string name="welcome_title3">Kemudahan Dalam Satu Genggaman!</string>
    <string name="welcome_subtitle">Aplikasi dari Internak buat bantu dan kelola untuk memaksimalkan peternakanmu.</string>
    <string name="welcome_subtitle2">Internak telah hadir dengan berbagai fitur terbaru. Dengan menerapkan teknologi pertanian budidaya jadi lebih praktis.</string>
    <string name="policy">Dengan mendaftar, saya telah membaca dan menyetujui InTernak Ketentuan Penggunaan dan Kebijakan Privasi</string>
    <string name="welcome_subtitle3">Dapatkan data lengkap dan keamanan yang bisa diakases dari hp kamu.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="started">Get Started</string>
    <string name="rememberPw">Lupa Kata Sandi?</string>
    <string name="kebijakan_privasi">InTernak berkomitmen untuk melindungi privasi Anda. Kebijakan Privasi ini menjelaskan praktik kami sehubungan dengan privasi informasi pada Data Pribadi yang kami proses melalui penggunaan individu Anda atas layanan, dan aplikasi kami.\n\nDengan mengakses, mengunduh, atau menggunakan layanan InTernak, Anda dianggap dengan sadar telah memahami adanya aktivitas pengumpulan, pemrosesan, pertukaran informasi Anda, termasuk informasi pribadi dan data pengguna. Privasi Anda adalah hal yang penting bagi kami, maka mohon untuk memahami bagaimana ketentuan privasi kami bekerja dan hubungi kami jika dirasa ada hal yang kurang dipahami.\n\nAnda dapat menghubungi kami di info@internak.id.</string>
    <string name="persyaratan_layanan">PT Sinergi Ketahanan Pangan, yang dikenal sebagai InTernak, adalah perusahaan yang didirikan berdasarkan hukum Republik Indonesia dengan Surat Keputusan Menteri Hukum dan Hak Asasi Manusia Republik Indonesia. InTernak berfokus pada industri peternakan sapi dan kambing, teknologi produksi, serta ritel B2B untuk hewan kurban. Aplikasi InTernak merupakan perangkat lunak yang dirancang sebagai alat manajemen kandang untuk peternakan sapi dan kambing. Selain itu, aplikasi ini juga menyediakan informasi terkini mengenai penjualan dan harga hewan kurban sapi dan kambing ("Layanan").\n\nDengan mengunduh atau menggunakan aplikasi ini, Anda dianggap telah menyetujui Syarat dan Ketentuan ini, yang disarankan untuk dibaca dengan cermat sebelum menggunakan aplikasi. Anda tidak diperbolehkan untuk menyalin, mengubah, atau mereproduksi aplikasi ini, bagian mana pun dari aplikasi, atau merek dagang kami dalam bentuk apa pun. Anda juga tidak diperbolehkan untuk mencoba mengekstrak kode sumber aplikasi atau menerjemahkan aplikasi ke dalam bahasa lain atau membuat versi turunan. Aplikasi itu sendiri, bersama dengan semua merek dagang, hak cipta, basis data, dan hak kekayaan intelektual lain yang terkait, tetap menjadi kepemilikan InTernak.\n\nHarap diperhatikan bahwa kami berhak untuk mengubah, memodifikasi, menambahkan, dan menghapus Syarat dan Ketentuan ini tanpa pemberitahuan sebelumnya. Oleh karena itu, Anda disarankan untuk secara berkala memeriksa Syarat dan Ketentuan. Dengan terus menggunakan aplikasi ini setelah terjadinya perubahan pada Syarat dan Ketentuan, Anda dianggap telah menyetujui perubahan tersebut.</string>
    <string-array name="jenis_kandang_array">
        <item>Terbuka</item>
        <item>Tertutup</item>
    </string-array>
</resources>