<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.ac.astra.polytechnic.internak.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cage"
        android:name="id.ac.astra.polytechnic.internak.ui.cage.CageFragment"
        android:label="@string/cage_title"
        tools:layout="@layout/fragment_cage" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="id.ac.astra.polytechnic.internak.ui.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />

</navigation>